--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  </head>
 <body>
  <section>
+     <div>
     <p><span>“Lead, Follow, or Get Out of the Way”</span> was the title of a 1981 biography of Ted Turner,
         who also had the saying on a plaque on his desk.</p>
     <p>In life there are leaders or at times it is you who must take the role of leader.  Another option in life is to follow the leader.  Nothing is wrong with being a follower, and if this is your role in a situation, being a good follower is just as important as being the leader.  And finally, there are leaders and followers as well as those who just seem to get in the way.  People who get in the way choose not to lead or to follow but slow the progress of an individual or group that is striving towards a goal. This quote has helped me in life and business.</p>
@@ -40,6 +41,7 @@
                 <li>Miche</li>
             </ul>
         </article>
+     </div>
  </section>
 </body>
 </html>
